--- a/package.json
+++ b/package.json
@@ -67,11 +67,30 @@
     "watchify": "^2.2.1"
   },
   "dependencies": {
+    "async": "^0.9.0",
     "backbone": "~1.1.2",
-    "body-parser": "^1.10.1",
-    "express": "^4.10.7",
+    "body-parser": "^1.10.2",
+    "bower": "^1.3.12",
+    "chalk": "^0.5.1",
+    "compression": "^1.3.0",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^0.6.0",
+    "consolidate": "^0.10.0",
+    "cookie-parser": "^1.3.3",
+    "express": "^4.11.1",
+    "express-session": "^1.10.1",
+    "forever": "^0.13.0",
+    "glob": "^4.3.5",
+    "helmet": "^0.6.0",
+    "lodash": "^2.4.1",
+    "method-override": "^2.3.1",
     "moment": "^2.9.0",
+    "mongoose": "^3.8.21",
+    "morgan": "^1.5.1",
+    "nodemailer": "^1.3.0",
+    "passport": "^0.2.1",
     "react": "^0.12.2",
-    "react-bootstrap": "^0.13.2"
+    "react-bootstrap": "^0.13.2",
+    "swig": "^1.4.2"
   }
 }
