--- a/.jshintrc
+++ b/.jshintrc
@@ -11,7 +11,9 @@
     "after"      : false,
     "afterEach"  : false,
     "equal"      : false,
-    "document"   : true
+    "document"   : true,
+    "jasmine": true,
+    "ApplicationConfiguration": true
   },
   "globalstrict": true,
   "quotmark": false,
@@ -20,5 +22,38 @@
   "undef": true,
   "unused": true,
   "indent": 2,
-  "node": true
+  "node": true,
+  "browser": true,
+  "esnext": true,
+  "bitwise": false,
+  "camelcase": false,
+  "curly": false,
+  "eqeqeq": true,
+  "immed": true,
+  "latedef": true,
+  "newcap": true,
+  "noarg": true,
+  "quotmark": "single",
+  "regexp": true,
+  "undef": true,
+  "unused": false,
+  "strict": true,
+  "trailing": true,
+  "smarttabs": false,
+  "predef": [
+    "define",
+    "require",
+    "exports",
+    "module",
+    "describe",
+    "before",
+    "beforeEach",
+    "after",
+    "afterEach",
+    "it",
+    "inject",
+    "expect"
+  ],
+  "devel": true,
+  "noempty": true
 }
