--- a/package.json
+++ b/package.json
@@ -37,33 +37,44 @@
     ]
   },
   "devDependencies": {
-    "browser-sync": "~1.3.6",
+    "browser-sync": "^1.3.6",
     "browserify": "^8.0.2",
     "browserify-shim": "^3.8.2",
     "coffeeify": "~0.7.0",
     "compression": "^1.3.0",
     "debowerify": "^1.2.0",
+    "grunt": "^0.4.5",
+    "grunt-scss-lint": "^0.3.4",
     "gulp": "^3.8.7",
     "gulp-autoprefixer": "^2.0.0",
     "gulp-changed": "^0.4.1",
+    "gulp-concat": "^2.4.3",
+    "gulp-csslint": "^0.1.5",
     "gulp-filesize": "0.0.6",
     "gulp-imagemin": "^0.6.2",
+    "gulp-jshint": "^1.9.0",
+    "gulp-livereload": "^3.5.0",
     "gulp-minify-css": "^0.3.11",
     "gulp-minify-html": "^0.1.8",
+    "gulp-mocha": "^2.0.0",
     "gulp-nodemon": "^1.0.5",
     "gulp-notify": "^1.4.2",
+    "gulp-rename": "^1.2.0",
     "gulp-sass": "^1.1.0",
+    "gulp-scss-lint": "^0.1.4",
     "gulp-sourcemaps": "^1.2.8",
     "gulp-uglify": "^1.0.2",
     "gulp-util": "^3.0.0",
     "handlebars": "^1.3.0",
     "hbsfy": "~2.0.0",
+    "imagemin-pngquant": "^4.0.0",
     "lodash": "^2.4.1",
     "pretty-hrtime": "~0.2.1",
     "reactify": "^0.17.1",
     "require-dir": "^0.1.0",
+    "should": "^4.6.1",
+    "supertest": "^0.15.0",
     "vinyl-source-stream": "~0.1.1",
-    "imagemin-pngquant": "^4.0.0",
     "watchify": "^2.2.1"
   },
   "dependencies": {
@@ -74,13 +85,13 @@
     "chalk": "^0.5.1",
     "compression": "^1.3.0",
     "connect-flash": "^0.1.1",
-    "connect-mongo": "^0.6.0",
+    "connect-mongo": "^0.4.1",
     "consolidate": "^0.10.0",
     "cookie-parser": "^1.3.3",
     "express": "^4.11.1",
     "express-session": "^1.10.1",
     "forever": "^0.13.0",
-    "glob": "^4.3.5",
+    "glob": "^4.0.5",
     "helmet": "^0.6.0",
     "lodash": "^2.4.1",
     "method-override": "^2.3.1",
@@ -89,6 +100,7 @@
     "morgan": "^1.5.1",
     "nodemailer": "^1.3.0",
     "passport": "^0.2.1",
+    "passport-local": "^1.0.0",
     "react": "^0.12.2",
     "react-bootstrap": "^0.13.2",
     "swig": "^1.4.2"
