--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "async": "^0.9.0",
     "backbone": "~1.1.2",
     "body-parser": "^1.10.2",
+    "bootstrap": "^3.3.2",
     "bower": "^1.3.12",
     "chalk": "^0.5.1",
     "compression": "^1.3.0",
