combined sftb with status app

--- a/package.json
+++ b/package.json
@@ -14,26 +14,23 @@
     "type": "git",
     "url": ""
   },
-  "//": {
-    "browser": {
-      "bootstrap": "bower_components/bootstrap/dist/js/bootstrap.js"
-    },
-    "browserify-shim": {
-      "bootstrap": {
-        "exports": "bootstrap",
-        "depends": [
-          "jquery:jQuery"
-        ]
-      }
+  "browser": {
+    "bootstrap": "./node_modules/bootstrap/dist/js/bootstrap.js"
+  },
+  "browserify-shim": {
+    "bootstrap": {
+      "exports": "bootstrap",
+      "depends": [
+        "jquery:$",
+        "jquery:jQuery"
+      ]
     }
   },
-  "browser": {},
-  "browserify-shim": {},
   "browserify": {
     "transform": [
       "reactify",
-      "browserify-shim",
-      "debowerify"
+      "debowerify",
+      "browserify-shim"
     ]
   },
   "devDependencies": {
@@ -94,6 +91,7 @@
     "forever": "^0.13.0",
     "glob": "^4.3.5",
     "helmet": "^0.6.0",
+    "jquery": "^2.1.3",
     "lodash": "^2.4.1",
     "method-override": "^2.3.1",
     "moment": "^2.9.0",
