--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
     "express": "^4.11.1",
     "express-session": "^1.10.1",
     "forever": "^0.13.0",
-    "glob": "4.0.5",
+    "glob": "^4.0.5",
     "helmet": "^0.6.0",
     "jquery": "^2.1.3",
     "lodash": "^2.4.1",
