--- a/package.json
+++ b/package.json
@@ -97,6 +97,8 @@
     "moment": "^2.9.0",
     "mongoose": "^3.8.21",
     "morgan": "^1.5.1",
+    "node-bourbon": "^1.2.3",
+    "node-neat": "^1.4.2",
     "nodemailer": "^1.3.0",
     "passport": "^0.2.1",
     "passport-local": "^1.0.0",
