implement debounce change

--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "react": "^0.12.2",
     "react-bootstrap": "^0.13.2",
     "superagent": "^0.21.0",
-    "swig": "^1.4.2"
+    "swig": "^1.4.2",
+    "vow": "^0.4.8"
   }
 }
