--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "node-bourbon": "^1.2.3",
     "node-neat": "^1.4.2",
     "nodemailer": "^1.3.0",
+    "normalize": "^0.3.1",
     "passport": "^0.2.1",
     "passport-local": "^1.0.0",
     "react": "^0.12.2",
