--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "passport-local": "^1.0.0",
     "react": "^0.12.2",
     "react-bootstrap": "^0.13.2",
+    "react-router": "^0.11.6",
     "superagent": "^0.21.0",
     "swig": "^1.4.2",
     "vow": "^0.4.8"
