--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "jquery": "^2.1.3",
     "lodash": "^2.4.1",
     "method-override": "^2.3.1",
+    "micro-events": "^1.0.0",
     "moment": "^2.9.0",
     "mongoose": "^3.8.21",
     "morgan": "^1.5.1",
