--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "gulp-sass": "^1.1.0",
     "gulp-scss-lint": "^0.1.4",
     "gulp-sourcemaps": "^1.2.8",
-    "gulp-uglify": "^1.0.2",
+    "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.0",
     "handlebars": "^1.3.0",
     "hbsfy": "~2.0.0",
@@ -91,6 +91,7 @@
     "forever": "^0.13.0",
     "glob": "~4.0.5",
     "helmet": "^0.6.0",
+    "immutable": "^3.6.2",
     "jquery": "^2.1.3",
     "lodash": "^2.4.1",
     "method-override": "^2.3.1",
