added react-a11y to check for errors

--- a/.jscsrc
+++ b/.jscsrc
@@ -4,4 +4,6 @@
   "validateQuoteMarks": true,
   "disallowMultipleVarDecl": false,
   "requireCamelCaseOrUpperCaseIdentifiers": "ignoreProperties"
+  "esprima": "esprima-fb",
+  "fileExtensions": [".js", ".jsx"],
 }
