--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "imagemin-pngquant": "^4.0.0",
     "lodash": "^2.4.1",
     "pretty-hrtime": "~0.2.1",
+    "react-a11y": "0.0.5",
     "reactify": "^0.17.1",
     "require-dir": "^0.1.0",
     "should": "^4.6.1",
