--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "node_modules/grunt-cli/bin/grunt",
     "postinstall": "npm run bower && npm run build",
-    "bower": "bower install",
+    "bower": "node -v",
     "build": "gulp",
     "start": "node server.js"
   },
@@ -34,7 +34,7 @@
     ]
   },
   "devDependencies": {
-    "browser-sync": "^1.3.6",
+    "browser-sync": "^2.2.1",
     "browserify": "^8.0.2",
     "browserify-shim": "^3.8.2",
     "coffeeify": "~0.7.0",
