--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "server.js",
   "scripts": {
     "test": "node_modules/grunt-cli/bin/grunt",
-    "postinstall": "npm run bower && npm run build",
+    "postinstall": "npm run bower && npm run build && npm run production",
     "bower": "node -v",
     "build": "gulp",
-    "start": "node server.js"
+    "start": "node server.js",
+    "production": "gulp production"
   },
   "repository": {
     "type": "git",
@@ -66,7 +67,7 @@
     "should": "^4.6.1",
     "supertest": "^0.15.0",
     "vinyl-source-stream": "~0.1.1",
-    "watchify": "^2.2.1"
+    "watchify": "^2.4.0"
   },
   "dependencies": {
     "async": "^0.9.0",
