--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "gulp-scss-lint": "^0.1.4",
     "gulp-sourcemaps": "^1.2.8",
     "gulp-uglify": "^1.1.0",
+    "gulp-uncss": "^1.0.0",
     "gulp-util": "^3.0.0",
     "handlebars": "^1.3.0",
     "hbsfy": "~2.0.0",
