--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "node_modules/grunt-cli/bin/grunt",
-    "postinstall": "npm run bower && npm run build && npm run production",
+    "postinstall": "npm run bower && npm run build",
     "bower": "node -v",
-    "build": "gulp",
+    "build": "NODE_ENV=development gulp",
     "start": "node server.js",
-    "production": "gulp production"
+    "production": "NODE_ENV=production gulp production"
   },
   "repository": {
     "type": "git",
@@ -43,7 +42,7 @@
     "gulp-concat": "^2.4.3",
     "gulp-csslint": "^0.1.5",
     "gulp-filesize": "0.0.6",
-    "gulp-imagemin": "^0.6.2",
+    "gulp-imagemin": "2.2.1",
     "gulp-jshint": "^1.9.0",
     "gulp-livereload": "^3.5.0",
     "gulp-minify-css": "^0.4.5",
