fixed annonying browsersync issue by downgrading to oldest known working version

--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "postinstall": "npm run bower && npm run build",
-    "bower": "node -v",
-    "build": "NODE_ENV=development gulp",
+    "postinstall": "npm run version && npm run build",
+    "version": "node -v",
+    "build": "gulp",
     "start": "node server.js",
     "production": "NODE_ENV=production gulp production"
   },
@@ -33,7 +33,7 @@
     ]
   },
   "devDependencies": {
-    "browser-sync": "^2.2.2",
+    "browser-sync": "~1.3.6",
     "browserify": "^9.0.3",
     "browserify-shim": "^3.8.3",
     "gulp": "^3.8.11",
