added modal to edit table, in process of adding more modals for edit floor, edit view, patient optimizer, login

--- a/.jshintrc
+++ b/.jshintrc
@@ -11,7 +11,7 @@
     "after"      : false,
     "afterEach"  : false,
     "equal"      : false,
-    "document"   : true,
+    "document"   : false,
     "jasmine": true,
     "ApplicationConfiguration": true
   },
