--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "version": "node -v",
     "build": "gulp",
     "start": "node server.js",
-    "production": "gulp production"
+    "production": "NODE_ENV=production gulp production"
   },
   "repository": {
     "type": "git",
@@ -29,6 +29,7 @@
   "browserify": {
     "transform": [
       "reactify",
+      "envify",
       "browserify-shim"
     ]
   },
@@ -36,6 +37,7 @@
     "browser-sync": "^2.2.2",
     "browserify": "^9.0.3",
     "browserify-shim": "^3.8.3",
+    "envify": "^3.3.0",
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.0.0",
     "gulp-changed": "^0.4.1",
@@ -48,17 +50,17 @@
     "gulp-minify-html": "^0.1.8",
     "gulp-mocha": "^2.0.0",
     "gulp-nodemon": "^1.0.5",
-    "gulp-notify": "^1.4.2",
+    "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.0",
-    "gulp-sass": "^1.1.0",
-    "gulp-sourcemaps": "^1.2.8",
+    "gulp-sass": "^1.3.3",
+    "gulp-sourcemaps": "^1.5.0",
     "gulp-uglify": "^1.1.0",
-    "gulp-util": "^3.0.0",
+    "gulp-util": "^3.0.4",
     "handlebars": "^1.3.0",
     "hbsfy": "~2.0.0",
     "imagemin-pngquant": "^4.0.0",
-    "pretty-hrtime": "~0.2.1",
-    "reactify": "^0.17.1",
+    "pretty-hrtime": "~1.0.0",
+    "reactify": "^1.0.0",
     "require-dir": "^0.1.0",
     "should": "^4.6.1",
     "supertest": "^0.15.0",
@@ -77,9 +79,10 @@
     "cookie-parser": "^1.3.3",
     "express": "^4.11.1",
     "express-session": "^1.10.1",
+    "flux": "^2.0.1",
     "forever": "^0.13.0",
     "glob": "~4.0.5",
-    "helmet": "^0.6.0",
+    "helmet": "^0.6.2",
     "immutable": "^3.6.2",
     "jquery": "^2.1.3",
     "lodash": "^2.4.1",
