--- a/package.json
+++ b/package.json
@@ -96,9 +96,10 @@
     "normalize": "^0.3.1",
     "passport": "^0.2.1",
     "passport-local": "^1.0.0",
-    "react": "^0.13.0",
+    "react": "^0.12.2",
     "react-bootstrap": "^0.16.1",
-    "react-router": "^0.12.4",
+    "react-select": "^0.4.0",
+    "selectize": "^0.12.0",
     "superagent": "^0.21.0",
     "swig": "^1.4.2",
     "vow": "^0.4.8"
