--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "helmet": "^0.6.2",
     "immutable": "^3.6.2",
     "jquery": "^2.1.3",
+    "jquery-ui": "^1.10.5",
     "lodash": "^2.4.1",
     "method-override": "^2.3.1",
     "moment": "^2.9.0",
