--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "selectize": "^0.12.0",
     "superagent": "^0.21.0",
     "swig": "^1.4.2",
+    "uuid": "^2.0.1",
     "vow": "^0.4.8"
   }
 }
