--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "postinstall": "npm run version && npm run build",
+    "postinstall": "npm run version && npm run production",
+    "bower": "bower install",
     "version": "node -v",
-    "build": "gulp",
-    "start": "node server.js",
-    "production": "NODE_ENV=production gulp production"
+    "build": "cd gulp && npm install && NODE_ENV=development && gulp",
+    "start": "node server",
+    "test": "npm run production",
+    "production": "cd gulp && npm install && NODE_ENV=production && gulp production"
   },
   "repository": {
     "type": "git",
@@ -49,7 +51,6 @@
     "gulp-minify-css": "^0.4.5",
     "gulp-minify-html": "^0.1.8",
     "gulp-mocha": "^2.0.0",
-    "gulp-nodemon": "^1.0.5",
     "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^1.3.3",
@@ -74,7 +75,6 @@
     "chalk": "^0.5.1",
     "compression": "^1.4.1",
     "connect-flash": "^0.1.1",
-    "connect-mongo": "^0.4.1",
     "consolidate": "^0.10.0",
     "cookie-parser": "^1.3.3",
     "express": "^4.11.1",
@@ -89,7 +89,7 @@
     "lodash": "^2.4.1",
     "method-override": "^2.3.1",
     "moment": "^2.9.0",
-    "mongoose": "^3.8.21",
+    "mongoose": "^4.0.1",
     "morgan": "^1.5.1",
     "node-bourbon": "^1.2.3",
     "node-neat": "^1.4.2",
