--- a/shippable.yml
+++ b/shippable.yml
@@ -1,9 +1,9 @@
-# language setting
-language: node_js
-
-# version numbers, testing against two versions of node
-node_js:
-  - 0.12.2
+# # language setting
+# language: node_js
+#
+# # version numbers, testing against two versions of node
+# node_js:
+#   - 0.12.2
 
 script:
   - true
