--- a/.dockerignore
+++ b/.dockerignore
@@ -6,3 +6,11 @@ node_modules
 bower_components
 **/*.log
 public
+app/plugins
+app/js/config.js
+gulp/node_modules
+Dockerfile
+.dockerignore
+.git
+.gitignore
+README.md
