--- a/gulp/package.json
+++ b/gulp/package.json
@@ -73,6 +73,8 @@
   "dependencies": {
     "lodash": "^2.4.1",
     "method-override": "^2.3.1",
-    "moment": "^2.9.0"
+    "moment": "^2.9.0",
+    "react": "^0.13.2",
+    "react-bootstrap": "^0.21.0"
   }
 }
